Fixing an issue where the container element was behind the navbar. Added missing classes. Likely not committed from home. Added a buildThirdParty gulp task that will bundle up all the third party js into one file. This should probably be changed down teh road to be combined into main.js

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -5,5 +5,5 @@ body {
 }
 
 #container {
-  height: 75%;
+  padding-top: 40px;
 }
